<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Recipes">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recipe"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/adoboCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/adoboLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/adobo"
                        android:contentDescription="@string/adoboStr"/>

                    <TextView
                        android:id="@+id/AdoboClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/adoboStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/calderetaCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/calderetaLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/caldereta"
                        android:contentDescription="@string/calderetaStr"/>

                    <TextView
                        android:id="@+id/CalderetaClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/calderetaStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/menudoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/menudoLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/menudo"
                        android:contentDescription="@string/menudoStr"/>

                    <TextView
                        android:id="@+id/MenudoClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/menudoStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/LaingCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/LaingLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/laing"
                        android:contentDescription="@string/laingStr"/>

                    <TextView
                        android:id="@+id/LaingClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/laingStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/PinakbetCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/PinakbetLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/pinakbet"
                        android:contentDescription="@string/pinakbetStr"/>

                    <TextView
                        android:id="@+id/PinakbetClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/pinakbetStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/BicolExpressCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/BicolExpressLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/bicolexpress"
                        android:contentDescription="@string/bicolexpressStr"/>

                    <TextView
                        android:id="@+id/BicolExpressClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/bicolexpressStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/SinigangCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/SinigangLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/sinigang"
                        android:contentDescription="@string/sinigangStr"/>

                    <TextView
                        android:id="@+id/SinigangClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/sinigangStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/TinolaCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/TinolaLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/tinola"
                        android:contentDescription="@string/tinolaStr"/>

                    <TextView
                        android:id="@+id/TinolaClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/tinolaStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/KareKareCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/KareKareLandpg"
                        android:layout_width="79dp"
                        android:layout_height="65dp"
                        android:src="@drawable/karekare"
                        android:contentDescription="@string/KareKareStr"/>

                    <TextView
                        android:id="@+id/KareKareClkable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/KareKareStr"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:itemRippleColor="@color/grey"/>
</androidx.constraintlayout.widget.ConstraintLayout>
